4th test. Displaying input fields when clicking on Start Game button.

--- a/src/components/SoccerScore.module.css
+++ b/src/components/SoccerScore.module.css
@@ -1,7 +1,7 @@
-button {
+.endGameButton {
   display: none;
 }
 
-.gameListItem:hover > button {
+.gameListItem:hover > .endGameButton {
   display: inline-block;
 }
